# backend/java/housedb-parent/housedb-core/src/main/java/com/rafex/housedb/service/models/MetadataTemplate.java
@@ -1,0 +1,13 @@
+package com.rafex.housedb.service.models;
+
+import java.util.UUID;
+
+public record MetadataTemplate(
+        UUID metadataTemplateId,
+        String metadataTarget,
+        String code,
+        String name,
+        String description,
+        String definitionJson,
+        boolean enabled) {
+}
