# backend/java/housedb-parent/housedb-ports/src/main/java/com/rafex/housedb/repository/models/MetadataTemplateEntity.java
@@ -1,0 +1,13 @@
+package com.rafex.housedb.repository.models;
+
+import java.util.UUID;
+
+public record MetadataTemplateEntity(
+        UUID metadataTemplateId,
+        String metadataTarget,
+        String code,
+        String name,
+        String description,
+        String definitionJson,
+        boolean enabled) {
+}
